# journal2fluentd

./: Main.hs  README.md  default.nix  journal2fluentd.cabal
